+completed logic of business :snake:

--- a/ShuttleOff/www/court.html
+++ b/ShuttleOff/www/court.html
@@ -95,8 +95,7 @@
                                                         <div class="crt-sched-det">
                                                             <h4>Time:&nbsp;5PM - 6PM</h4>
                                                             <h5>SUN MON TUE WED THU FRI SAT </h5>
-                                                        </div>
-                                                        <span class = "crt-sched-opt crt-sched-edit"><i class="fas fa-tools"></i></span>
+                                                        </div>                                                        
                                                         <span class = "crt-sched-opt crt-sched-del" ><i class="fas fa-trash-alt"></i></span>
                                                     </div>
                                                 </div> -->
@@ -121,39 +120,9 @@
                                                         <select name="a-info" id=""></select>
                                                     </div>
                                                 </div>
-                                                <div class="availability-details av-day">
-                                                    <h3>Days Available</h3>
-                                                    <!-- a-info[2] -->
-                                                    <div class="day-container">
-                                                        <div class="day">
-                                                            <input type="checkbox" name="" id="">
-                                                            <h4>SUN</h4>
-                                                        </div>
-                                                        <div class="day">
-                                                            <input type="checkbox" name="" id="">
-                                                            <h4>MON</h4>
-                                                        </div>
-                                                        <div class="day">
-                                                            <input type="checkbox" name="" id="">
-                                                            <h4>TUE</h4>
-                                                        </div>
-                                                        <div class="day">
-                                                            <input type="checkbox" name="" id="">
-                                                            <h4>WED</h4>
-                                                        </div>
-                                                        <div class="day">
-                                                            <input type="checkbox" name="" id="">
-                                                            <h4>THU</h4>
-                                                        </div>
-                                                        <div class="day">
-                                                            <input type="checkbox" name="" id="">
-                                                            <h4>FRI</h4>
-                                                        </div>
-                                                        <div class="day">
-                                                            <input type="checkbox" name="" id="">
-                                                            <h4>SAT</h4>
-                                                        </div>
-                                                    </div>
+                                                <div class="availability-details av-date">
+                                                    <h3>Effective Date</h3>
+                                                    <input type="date" name="a-info">
                                                 </div>
                                                 <div class="av-btn-container">
                                                     <div class="av-btn-wrap">
