+need stress testing on reservations

--- a/ShuttleOff/www/reservation.html
+++ b/ShuttleOff/www/reservation.html
@@ -56,6 +56,48 @@
                         <div id="pane2">
                             <div class="pane2-wrap">
                                 <h2 class = "empty-pane">Nothing to see here...</h2>
+                                <!-- <div tabindex = 0 class="pane2-content">
+                                    <div class="pane2-content-wrap">
+                                        <i class="fas fa-map-marker-alt">&nbsp;Court Name</i>
+                                        <i class="far fa-clock">&nbsp;10PM - 11PM</i>
+                                        <span><i onclick = "openReviewModal()" class="fas fa-comment-alt"></i></span>
+                                    </div>
+                                </div>
+                                <div class="court-address">
+                                    <h4>Address</h4>
+                                    <p>Lorem Ipsum</p>
+                                </div> -->
+                            </div>
+                            <!-- Review Modal -->
+                            <div class="review-mod">
+                                <div class="rv-mod-wr">
+                                    <div class="rv-mod-hd">
+                                        <div class="rv-mod-hd-wr">
+                                            <h2>Leave a Review!</h2>
+                                        </div>
+                                    </div>
+                                    <div class="rv-mod-body">
+                                        <div class="rv-mod-bod-wr">
+                                            <h3>Court Name</h3>
+                                            <div class="star-cont">
+                                                <div class="star-wrap">
+                                                    <i class="far fa-star"></i>
+                                                    <i class="far fa-star"></i>
+                                                    <i class="far fa-star"></i>
+                                                    <i class="far fa-star"></i>
+                                                    <i class="far fa-star"></i>
+                                                </div>
+                                            </div>
+                                            <textarea cols="20" rows="1" placeholder="Please be nice UwU"></textarea>
+                                        </div>
+                                    </div>
+                                    <div class="rv-mod-btn-cont">
+                                        <div class="rv-mod-btn-wr">
+                                            <button class="rv-btn" >Cancel</button>
+                                            <button class="rv-btn" >Submit</button>
+                                        </div>
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
